--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -43,7 +43,7 @@ pre code {
   position: relative;
   padding: 1.5rem 2rem;
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: 768px;
   border-radius: 0.25rem;
   background-color: #ffffff;
   box-shadow: 3px 3px 10px 1px rgba(0 0 0 / 0.1);
@@ -60,11 +60,10 @@ pre code {
   margin-left: 0.25rem;
 }
 
+/* Component Custom styling */
 scroll-to-top::part(button) {
   background-color: #0d6efd;
-  border-color: #0d6efd;
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid #0d6efd;
   color: #ffffff;
   padding: .375rem .75rem;
   border-radius: .25rem;
