--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -2,6 +2,12 @@
   --body-max-width: 800px;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .noscript-banner {
   width: 100%;
   padding: 0.5rem 0.75rem;
